<resources>
    <string name="app_name">Time Banking</string>
    <string name="time_slot">Time Slot</string>
    <string name="edit_time_slot">Edit Time Slot</string>
    <string name="time_slots">Time Slots</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="reviews">Reviews</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="photo_iv_description">User Photo</string>
    <string name="edit_photo_ib_description">Edit Photo</string>
    <string name="full_name_et_hint">Full Name</string>
    <string name="time_credit_tv_text">Time credit:</string>
    <string name="nickname_et_hint">Nickname</string>
    <string name="email_et_hint">Email</string>
    <string name="location_et_hint">Location</string>
    <string name="skills_tv_text">Skills</string>
    <string name="description_et_hint">Description</string>
    <string name="edit_photo_menu_select_image_title">Select from gallery</string>
    <string name="edit_photo_menu_take_image_title">Take a picture from camera</string>
    <string name="toolbar_menu_edit_description">Edit Menu</string>
    <string name="toolbar_menu_edit_title">Edit</string>
    <string name="open_chat">Open Chat</string>
    <string name="new_feedback">New Feedback</string>
    <string name="title">Title</string>
    <string name="user">User</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="date_time">Date and time</string>
    <string name="time_credit">Time credit</string>
    <string name="location">Location</string>
    <string name="skill">Skill</string>
    <string name="edit">Edit</string>
    <string name="navigation_menu_show_profile_fragment">Profile</string>
    <string name="navigation_menu_show_skill_fragment">Skills</string>
    <string name="navigation_menu_time_slot_list_fragment">My Time Slots</string>
    <string name="navigation_menu_logout">Logout</string>
    <string name="no_time_slots">There are no Time Slots available!</string>
    <string name="no_skills">There are no skills available!</string>
    <string name="no_reviews">There are no reviews available!</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="time_slot_main_info">Time slot main info</string>
    <string name="time_slot_starts_time">Time slot start time</string>
    <string name="timeslot_owner">Time slot owner</string>
    <string name="time_slot_credit">Time slot credit</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="no_filter">Clear filter</string>
    <string name="personal_info">Personal info</string>
    <string name="send_message">Send a message</string>
    <string name="message">Message</string>
    <string name="my_chats">My Chats</string>
    <string name="my_time_slots">My Time Slots</string>
    <string name="requested_time_slot">Requested Time Slots</string>
    <string name="requested_ts">Requested TS</string>
    <string name="no_chats">You have not opened any chats</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="accept_request">Do you want to accept this time slot request?</string>
    <string name="request_accepted">You have accepted this request!</string>
    <string name="no_messages">Type a message to open a request for this time slot!</string>
    <string name="leave_a_feedback">Leave a feedback</string>
    <string name="rating">Rating</string>
    <string name="highest_rating">Highest rating</string>
    <string name="lowest_rating">Lowest rating</string>
    <string name="one_star">&#9733;</string>
    <string name="two_stars">&#9733;&#9733;</string>
    <string name="three_stars">&#9733;&#9733;&#9733;</string>
    <string name="four_stars">&#9733;&#9733;&#9733;&#9733;</string>
    <string name="five_stars">&#9733;&#9733;&#9733;&#9733;&#9733;</string>
    <string name="user_rating">User rating</string>
    <string name="given_ratings">Given ratings</string>
    <string name="eq_one_hour">1 hour</string>
    <string name="le_three_hours">&#8804;3 hours</string>
    <string name="le_five_hours">&#8804;5 hours</string>
    <string name="gt_five_hours">&#62;5 hours</string>
    <string name="more">More</string>
    <string name="required">Required</string>
</resources>