<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/filter"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/time_credit_filter"
                android:icon="@drawable/ic_av_timer"
                android:title="@string/time_credit"
                app:iconTint="@color/md_theme_onBackground">

                <menu>

                    <item
                        android:id="@+id/eq_one_hour"
                        android:title="@string/eq_one_hour" />

                    <item
                        android:id="@+id/le_three_hours"
                        android:title="@string/le_three_hours" />

                    <item
                        android:id="@+id/le_five_hours"
                        android:title="@string/le_five_hours" />

                    <item
                        android:id="@+id/gt_five_hours"
                        android:title="@string/gt_five_hours" />

                </menu>

            </item>

            <item
                android:id="@+id/no_filter"
                android:icon="@drawable/ic_clear"
                android:title="@string/no_filter"
                app:iconTint="@color/md_theme_onBackground" />

        </menu>

    </item>

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/time_credit_sort"
                android:icon="@drawable/ic_av_timer"
                android:title="@string/time_credit"
                app:iconTint="@color/md_theme_onBackground" />

            <item
                android:id="@+id/title_sort"
                android:icon="@drawable/ic_title"
                android:title="@string/title"
                app:iconTint="@color/md_theme_onBackground" />

            <item
                android:id="@+id/date_sort"
                android:icon="@drawable/ic_today"
                android:title="@string/date"
                app:iconTint="@color/md_theme_onBackground" />

        </menu>

    </item>

</menu>