<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/skillListFragment"
            android:checkable="true"
            android:title="@string/navigation_menu_show_skill_fragment" />

        <item
            android:id="@+id/mytimeSlotListFragment"
            android:checkable="true"
            android:title="@string/navigation_menu_time_slot_list_fragment" />

        <item
            android:id="@+id/timeSlotRequiredListFragment"
            android:checkable="true"
            android:title = "@string/requested_ts"/>

        <item
            android:id="@+id/chatListFragment"
            android:checkable="true"
            android:title="@string/my_chats" />



    </group>

    <group
        android:id="@+id/logout_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/showProfileFragment"
            android:checkable="true"
            android:title="@string/navigation_menu_show_profile_fragment" />

        <item
            android:id="@+id/authFragment"
            android:checkable="true"
            android:title="@string/navigation_menu_logout" />

    </group>

</menu>