<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/photo_iv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/nav_text_view_margin"
        android:text="@string/full_name_et_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email_et_hint"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name" />

    <TextView
        android:id="@+id/tv_time_credit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/time_credit_tv_text"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@id/tv_time_credit_value"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_time_credit_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_time_credit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

</androidx.constraintlayout.widget.ConstraintLayout>